--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>Bootstrap Theme</title>
 </head>
 
+
+
 <body>
     <!--NAVBAR-->
     <nav class="navbar navbar-expand-md navbar-light fixed-top py-4 id="navbar>
@@ -22,7 +24,6 @@
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -42,7 +43,55 @@
         </din>
     </nav>
 
+    <!--SHOWCASE-->
+    <section id="showcase" class="py-5">
+        <div class="primary-overlay text-white">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-lg-6 text-center">
+                        <h1 class="display-2 mt-5 pt-5">
+                         Do What You DreamOf ...
+                        </h1>
+                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda at, sit! At cumque dolore, ducimus est mollitia neque provident temporibus!</p>
+                        <a href="#" class="btn btn-outline-secondary btn-lg text-white">
+                            <i class="fa fa-arrow-right">Read More</i>
+                        </a>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <img src="img/book.png" alt="" class="img-fluid d-none d-lg-block">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
