--- a/index.html
+++ b/index.html
@@ -67,6 +67,151 @@
         </div>
     </section>
 
+    <!--NEWSLETTER-->
+    <section id="newsletter bg-dark text-white" class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <input type="text" class="form-control form-control-lg mb-resp" placeholder="Enter Name">
+                </div>
+                <div class="col-md-4">
+                    <input type="email" class="form-control form-control-lg mb-resp" placeholder="Enter Email">
+                </div>
+                <div class="col-md-4">
+                    <button class="btn btn-primary btn-lg btn-block">
+                        <i class="fa fa-envelope-open-o"></i>Subscribe
+                    </button>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <!--BOXES-->
+    <section id="boxes" class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 mb-resp">
+                    <div class="card text-center border-primary ">
+                        <div class="card-body">
+                            <h3 class="text-primary">Be Better</h3>
+                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid dolor eveniet incidunt iusto laborum laudantium nemo nisi obcaecati quasi totam?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 mb-resp">
+                    <div class="card text-center  bg-primary  ">
+                        <div class="card-body">
+                            <h3 class="text-white">Be Smarter</h3>
+                            <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid
+                                dolor eveniet incidunt iusto laborum laudantium nemo nisi obcaecati quasi totam?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 mb-resp">
+                    <div class="card text-center border-primary ">
+                        <div class="card-body">
+                            <h3 class="text-primary">Be Faster</h3>
+                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid
+                                dolor eveniet incidunt iusto laborum laudantium nemo nisi obcaecati quasi totam?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 mb-resp">
+                    <div class="card text-center bg-primary ">
+                        <div class="card-body">
+                            <h3 class="text-white">Be Stronger</h3>
+                            <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid
+                                dolor eveniet incidunt iusto laborum laudantium nemo nisi obcaecati quasi totam?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ABOUT / WHY  SECTION-->
+    <section id="about" class="py-5 text-center bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="info-header mb-5">
+                        <h1 class="text-primary pb-3">
+                            Why This Book?
+                        </h1>
+                        <p class="lead pb-3">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab commodi
+                            consectetur culpa deserunt est, ex magni nesciunt perferendis temporibus voluptas?
+                        </p>
+                    </div>
+                    <!--ACCORDION-->
+                    <div id="accordion">
+                        <div class="card">
+                            <div class="card-header">
+                                <h5 class="mb-0">
+                                    <div href="#collapse1" data-toggle="collapse"
+                                         data-parent="#accordion"><i class="fa fa-arrow-down"></i>
+                                        Get Inspired
+                                    </div>
+                                </h5>
+                            </div>
+                            <div id="collapse1" class="collapse show">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias asperiores
+                                    aut consectetur cum dolorem est et ex laudantium non omnis optio pariatur
+                                    recusandae repellat, saepe sed tenetur veritatis voluptates! Adipisci autem d
+                                    electus dolore ipsa itaque optio sint, tempora tempore veniam voluptatem. Ab
+                                    accusamus asperiores autem deleniti doloremque ipsam itaque nostrum placeat quis. A animi, commodi consequuntur exercitationem ipsum iure maiores mollitia nihil omnis perferendis perspiciatis porro possimus quaerat quas, quis quo reprehenderit tempora vero! Amet atque autem consectetur cupiditate deserunt doloremque doloribus earum eius facere labore laboriosam nihil numquam placeat quia quidem quis quod repudiandae similique, sunt suscipit veritatis voluptates!
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                <h5 class="mb-0">
+                                    <div href="#collapse2" data-toggle="collapse"
+                                         data-parent="#accordion"><i class="fa fa-arrow-down"></i>
+                                        Gain The Knowledge
+                                    </div>
+                                </h5>
+                            </div>
+                            <div id="collapse2" class="collapse">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias asperiores
+                                    aut consectetur cum dolorem est et ex laudantium non omnis optio pariatur
+                                    recusandae repellat, saepe sed tenetur veritatis voluptates! Adipisci autem d
+                                    electus dolore ipsa itaque optio sint, tempora tempore veniam voluptatem. Ab
+                                    accusamus asperiores autem deleniti doloremque ipsam itaque nostrum placeat quis. A animi, commodi consequuntur exercitationem ipsum iure maiores mollitia nihil omnis perferendis perspiciatis porro possimus quaerat quas, quis quo reprehenderit tempora vero! Amet atque autem consectetur cupiditate deserunt doloremque doloribus earum eius facere labore laboriosam nihil numquam placeat quia quidem quis quod repudiandae similique, sunt suscipit veritatis voluptates!
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                <h5 class="mb-0">
+                                    <div href="#collapse3" data-toggle="collapse"
+                                         data-parent="#accordion"><i class="fa fa-arrow-down"></i>
+                                        Open Your Mind
+                                    </div>
+                                </h5>
+                            </div>
+                            <div id="collapse3" class="collapse">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias asperiores
+                                    aut consectetur cum dolorem est et ex laudantium non omnis optio pariatur
+                                    recusandae repellat, saepe sed tenetur veritatis voluptates! Adipisci autem d
+                                    electus dolore ipsa itaque optio sint, tempora tempore veniam voluptatem. Ab
+                                    accusamus asperiores autem deleniti doloremque ipsam itaque nostrum placeat quis. A animi, commodi consequuntur exercitationem ipsum iure maiores mollitia nihil omnis perferendis perspiciatis porro possimus quaerat quas, quis quo reprehenderit tempora vero! Amet atque autem consectetur cupiditate deserunt doloremque doloribus earum eius facere labore laboriosam nihil numquam placeat quia quidem quis quod repudiandae similique, sunt suscipit veritatis voluptates!
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 
