--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 
 
-<body>
+<body id="home" data-spy="scroll" data-target="#main-nav">
     <!--NAVBAR-->
-    <nav class="navbar navbar-expand-md navbar-light fixed-top py-4 id="navbar>
-        <din class="container">
+    <nav class="navbar navbar-expand-md navbar-light fixed-top py-4" id="main-nav">
+        <div class="container">
             <a href="#home" class="nav-brand">
                 <img src="img/mlogo.png"  width="50" height="50" alt="">
-                <h3 class="d-inline align-middle">Mizuxe</h3>
+                <h3 class="d-inline align-middle text-dark">Mizuxe</h3>
             </a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,7 @@
                     </li>
                 </ul>
             </div>
-        </din>
+        </div>
     </nav>
 
     <!--SHOWCASE-->
@@ -48,19 +48,17 @@
         <div class="primary-overlay text-white">
             <div class="container">
                 <div class="row">
-
                     <div class="col-lg-6 text-center">
                         <h1 class="display-2 mt-5 pt-5">
-                         Do What You DreamOf ...
+                         Do What You Dream Of ...
                         </h1>
                         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda at, sit! At cumque dolore, ducimus est mollitia neque provident temporibus!</p>
                         <a href="#" class="btn btn-outline-secondary btn-lg text-white">
                             <i class="fa fa-arrow-right">Read More</i>
                         </a>
                     </div>
-
                     <div class="col-lg-6">
-                        <img src="img/book.png" alt="" class="img-fluid d-none d-lg-block">
+                        <img src="img/book.png" alt="Read This Book" class="img img-fluid d-none d-lg-block"> <!--todo img не влазит, убрать костыль (css: 14)-->
                     </div>
                 </div>
             </div>
@@ -211,6 +209,208 @@
             </div>
         </div>
     </section>
+
+    <!-- AUTHORS-->
+    <section id="authors" class="text-center my-5">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="info-header mb-5">
+                        <h1 class="text-primary pb-3">
+                            Meet The Authors
+                        </h1>
+                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque eos fugiat nemo totam voluptatem! Amet atque odit repudiandae sequi voluptatem.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6 col-lg-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/person1.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                            <h3>Susan Williams</h3>
+                            <h5 class="text-muted"></h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam asperiores assumenda beatae corporis debitis earum, et maiores modi necessitatibus perferendis, recusandae repellendus vero voluptates!</p>
+                            <div class="d-flex justify-content-center">
+                                <div class="p-4">
+                                    <a href="https://vk.com">
+                                        <i class="fa fa-vk"></i>
+                                    </a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="https://vk.com/vitaly.likhachev">
+                                        <i class="fa fa-facebook"></i>
+                                    </a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="https://vk.com">
+                                        <i class="fa fa-instagram"></i>
+                                    </a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="https://vk.com">
+                                        <i class="fa fa-twitter"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/person2.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                            <h3>Grace Smith</h3>
+                            <h5 class="text-muted"></h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam asperiores assumenda beatae corporis debitis earum, et maiores modi necessitatibus perferendis, recusandae repellendus vero voluptates!</p>
+                            <div class="d-flex justify-content-center">
+                                <div class="p-4">
+                                    <a href="https://vk.com">
+                                        <i class="fa fa-vk"></i>
+                                    </a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="https://vk.com/vitaly.likhachev">
+                                        <i class="fa fa-facebook"></i>
+                                    </a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="https://vk.com">
+                                        <i class="fa fa-instagram"></i>
+                                    </a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="https://vk.com">
+                                        <i class="fa fa-twitter"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/person3.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                            <h3>Jonh Doe</h3>
+                            <h5 class="text-muted"></h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa reiciendis, repellendus. Adipisci aut, blanditiis dolorum exercitationem explicabo illo, odit omnis praesentium quod saepe tempore temporibus!</p>
+                            <div class="d-flex justify-content-center">
+                                <div class="p-4">
+                                    <a href="https://vk.com">
+                                        <i class="fa fa-vk"></i>
+                                    </a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="https://vk.com/vitaly.likhachev">
+                                        <i class="fa fa-facebook"></i>
+                                    </a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="https://vk.com">
+                                        <i class="fa fa-instagram"></i>
+                                    </a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="https://vk.com">
+                                        <i class="fa fa-twitter"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/person4.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                            <h3>Kevin Swanson</h3>
+                            <h5 class="text-muted"></h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque explicabo inventore ipsum libero unde. Consequuntur cumque ex exercitationem hic impedit labore, obcaecati quidem reprehenderit tempore.</p>
+                            <div class="d-flex justify-content-center">
+                                <div class="p-4">
+                                    <a href="https://vk.com">
+                                        <i class="fa fa-vk"></i>
+                                    </a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="https://vk.com/vitaly.likhachev">
+                                        <i class="fa fa-facebook"></i>
+                                    </a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="https://vk.com">
+                                        <i class="fa fa-instagram"></i>
+                                    </a>
+                                </div>
+                                <div class="p-4">
+                                    <a href="https://vk.com">
+                                        <i class="fa fa-twitter"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- CONTACT-->
+    <section id="contact" class="bg-light-py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-9">
+                    <h3>Get In Touch</h3>
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque eos, ipsum libero nulla ratione saepe!</p>
+                    <form >
+                        <div class="input-group input-group-lg mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fa fa-user"></i>
+                                </span>
+                            </div>
+                            <input type="text" class="form-control" placeholder="Name">
+                        </div>
+                        <div class="input-group input-group-lg mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fa fa-envelope-open-o"></i>
+                                </span>
+                            </div>
+                            <input type="text" class="form-control" placeholder="Email">
+                        </div>
+                        <div class="input-group input-group-lg mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fa fa-pencil"></i>
+                                </span>
+                            </div>
+                            <textarea  type="text" class="form-control" placeholder="Message" rows="5"></textarea>
+                        </div>
+                        <input type="submit" value="Submit" class="btn btn-primary btn-block btn-lg">
+                    </form>
+                </div>
+                <div class="col-lg-3 align-self-center">
+                    <img src="img/mlogo.png" alt="" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- CONTACT-->
+    <div  id="main-footer" class="py-5 bg-primary text-white mt-5" >
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-6 ml-auto">
+                    <p class="lead">Copyright &copy;
+                    <span id="year"></span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
